crates/runtime/tests/search/snapshots/integration_models__search__cayenne-s3_vectors-no_text_engine-dataset-multi_column_megascience_keywords_response.snap
---
source: crates/runtime/tests/search/mod.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "0.03",
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The base number is \\(\\boxed{2}\\), because \\(2^5 = 2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\)."
        ],
        "question": [
          "Which base number, when raised to the fifth power, equals thirty-two?"
        ]
      },
      "primary_key": {
        "id": 1277
      }
    },
    {
      "_score": "0.03",
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The even multiples of 5 between 0 and 60 are the multiples of 10: 10, 20, 30, 40, and 50. There are $\\boxed{5}$ such numbers."
        ],
        "question": [
          "How many numbers between 0 and 60 are even multiples of 5?"
        ]
      },
      "primary_key": {
        "id": 470
      }
    },
    {
      "_score": "0.03",
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The number 36 is $\\boxed{\\text{composite}}$ because it has divisors other than 1 and itself (e.g., 2, 3, 4, 6, 9, 12, 18)."
        ],
        "question": [
          "Identify the given number as prime, composite, or neither: 36."
        ]
      },
      "primary_key": {
        "id": 484
      }
    },
    {
      "_score": "0.03",
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The smallest number in the book is typically $\\boxed{1}$, as counting books usually start from this number."
        ],
        "question": [
          "What is the smallest number in the book \"Things You Can Count in This Counting Book\"?"
        ]
      },
      "primary_key": {
        "id": 1152
      }
    }
  ]
}
