crates/runtime/tests/search/snapshots/integration_models__search__cayenne-s3_vectors-no_text_engine-dataset-multi_column_megascience_vector_search_sql_filtered_index_only.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, trunc(_score, 3) as _score FROM vector_search(qs, 'secondary', answer, 4) WHERE subject != 'math' ORDER BY _score DESC, id"
---
[
  {
    "id": 1015,
    "_score": 0.285
  }
]
