crates/runtime/tests/search/snapshots/integration_models__search__cayenne-s3_vectors-no_text_engine-dataset-multi_column_megascience_vector_search_sql_filters.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer, trunc(_score, 3) as _score FROM vector_search(qs, 'secondary', answer) where subject!='math' order by _score desc, id LIMIT 4"
---
[
  {
    "id": 1015,
    "answer": "Pedunculagin and alchemillin have astringent and wound-healing properties, possibly due to their high tannin content.",
    "_score": 0.285
  },
  {
    "id": 821,
    "answer": "Dermatomycosis is caused by fungal infections, specifically various forms of *tinea*, such as athlete's foot (*tinea pedis*).",
    "_score": 0.246
  },
  {
    "id": 449,
    "answer": "More than 10 years of follow-up is required, as late recurrences (beyond 12 years) have been reported in 5%–10% of patients.",
    "_score": 0.24
  },
  {
    "id": 1193,
    "answer": "The body profile of Menidae is very deep and resembles a flat disc, due to the strongly curved ventral contour.",
    "_score": 0.204
  }
]
