crates/runtime/tests/search/snapshots/integration_models__search__cayenne-s3_vectors-no_text_engine-dataset-multi_column_megascience_vector_search_sql_index_only_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, trunc(_score, 3) as _score  FROM vector_search(qs, 'second', answer) order by _score desc, id desc LIMIT 4;"
---
Could not prepare EXPLAIN plan: Query execution failed: code: 'The service is currently unavailable', message: "tcp connect error", source: tonic::transport::Error(Transport, ConnectError(ConnectError("tcp connect error", 127.0.0.1:52181, Os { code: 61, kind: ConnectionRefused, message: "Connection refused" })))
